//! This code was AUTOGENERATED using the codama library.
//! Please DO NOT EDIT THIS FILE, instead use visitors
//! to add features, then rerun codama to update it.
//!
//! <https://github.com/codama-idl/codama>
//!
syntax = "proto3";

package vixen.parser.jupiter_order;

message FillIx {
	FillIxAccounts accounts = 1;
	FillIxData data = 2;
}

message FillIxAccounts {
	string taker = 1;
	string maker = 2;
	optional string taker_input_mint_token_account = 3;
	optional string maker_input_mint_token_account = 4;
	optional string taker_output_mint_token_account = 5;
	optional string maker_output_mint_token_account = 6;
	string input_mint = 7;
	string input_token_program = 8;
	string output_mint = 9;
	string output_token_program = 10;
	string system_program = 11;
}

message FillIxData {
	uint64 input_amount = 1;
	uint64 output_amount = 2;
	int64 expire_at = 3;
}


message ProgramIxs {
    oneof ix_oneof {
    	FillIx fill = 1;
    }
}

